--- a/app/src/main/res/layout/activity_list_information.xml
+++ b/app/src/main/res/layout/activity_list_information.xml
@@ -23,11 +23,12 @@
 
             <TextView
                 android:id="@+id/LocationName"
-                android:layout_width="243dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="14dp"
                 android:layout_marginTop="44dp"
                 android:gravity="center_vertical"
+                android:fontFamily="@font/pretendard_semibold"
                 android:text="서대문구청 전동보장구 급속충전기"
                 android:textSize="16sp" />
 
@@ -41,6 +42,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="94dp"
             android:textSize="12sp"
+            android:fontFamily="@font/pretendard_regular"
             android:text="16m"/>
 
 
@@ -60,6 +62,7 @@
             android:layout_marginStart="96dp"
             android:layout_marginTop="94dp"
             android:textSize="12sp"
+            android:fontFamily="@font/pretendard_regular"
             android:text="4.41(15)" />
 
 
@@ -72,7 +75,8 @@
             android:orientation="horizontal"
             android:gravity="center"
             android:layout_marginTop="138dp"
-            android:layout_marginBottom="47dp">
+            android:layout_marginBottom="47dp"
+            >
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -88,6 +92,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
+                    android:fontFamily="@font/pretendard_medium"
                     android:textSize="12sp"
                     android:text="전화" />
             </LinearLayout>
@@ -108,6 +113,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:textSize="12sp"
+                    android:fontFamily="@font/pretendard_medium"
                     android:text="즐겨찾기" />
 
             </LinearLayout>
@@ -128,6 +134,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:textSize="12sp"
+                    android:fontFamily="@font/pretendard_medium"
                     android:text="길안내" />
 
             </LinearLayout>
@@ -147,6 +154,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:textSize="12sp"
+                    android:fontFamily="@font/pretendard_medium"
                     android:text="공유" />
             </LinearLayout>
 
@@ -173,23 +181,18 @@
             app:tabIndicatorHeight="2dp"
             app:tabMode="fixed"
             app:tabGravity="fill"
-            app:tabIndicatorFullWidth="true">
+            app:tabIndicatorFullWidth="true"
+            app:tabTextAppearance="@style/CustomTabTextAppearance"/>
 
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="정보" />
 
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="평가" />
 
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="민원" />
-        </com.google.android.material.tabs.TabLayout>
+    
+    
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/tabs"/>
 
 
 
