--- a/app/src/main/res/values/font_style.xml
+++ b/app/src/main/res/values/font_style.xml
@@ -55,4 +55,12 @@
         <item name="android:lineSpacingExtra">0sp</item>
         <item name="android:includeFontPadding">false</item>
     </style>
+
+
+    <!--탭 레이아웃 디자인-->
+    <style name="CustomTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:fontFamily">@font/pretendard_regular</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/gray_scale7</item>
+    </style>
 </resources>
