--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,17 +16,18 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/main_bnv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="67dp"
         app:labelVisibilityMode="labeled"
+        android:background="@color/white"
+        app:itemTextColor="@color/bnv_selector"
+        app:itemIconTint="@color/bnv_selector"
+        app:itemActiveIndicatorStyle="@android:color/transparent"
+        app:itemTextAppearanceActive="@style/Body3"
+        app:itemTextAppearanceInactive="@style/Body3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav_menu"
     />
-
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
