--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,22 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/listFragment"
-        android:enabled="true"
+        android:icon="@drawable/navitem_list"
         android:title="@string/list" />
     <item
         android:id="@+id/mapFragment"
-        android:enabled="true"
+        android:icon="@drawable/navitem_map"
         android:title="@string/map" />
     <item
         android:id="@+id/communityFragment"
-        android:enabled="true"
+        android:icon="@drawable/navitem_cummunity"
         android:title="@string/community" />
     <item
         android:id="@+id/noteFragment"
-        android:enabled="true"
+        android:icon="@drawable/navitem_chat"
         android:title="@string/note" />
     <item
         android:id="@+id/mypageFragment"
-        android:enabled="true"
+        android:icon="@drawable/navitem_mypage"
         android:title="@string/mypage" />
 </menu>
