--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -7,44 +7,25 @@
     android:layout_height="match_parent"
     tools:context=".presentation.view.note.NoteListFragment">
 
-    <TextView
-        android:id="@+id/text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="채팅"
-        android:fontFamily="@font/pretendard_semibold"
-        android:textSize="16sp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="47dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
 
-    <ImageView
-        android:id="@+id/image_view"
-        android:layout_width="wrap_content"
+
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/iv_search"
-        app:layout_constraintStart_toEndOf="@id/text_view"
+        android:background="@color/white"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/cv_sos"
-        android:layout_marginStart="230dp"
-        android:layout_marginTop="36dp"/>
-
-    <ImageView
-        android:id="@+id/cv_sos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="13dp"
-        android:src="@drawable/ic_sos"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/image_view"
-        app:layout_constraintTop_toTopOf="@id/image_view" />
+        app:layout_constraintBottom_toTopOf="@id/rectangle_1" />
+
 
     <ScrollView
         android:id="@+id/scroll_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/image_view"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -53,7 +34,7 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="19dp" />
+             />
     </ScrollView>
 
     <View
@@ -61,9 +42,9 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="#E4E4E2"
-        app:layout_constraintTop_toBottomOf="@id/image_view"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="19dp"/>
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
