--- a/app/src/main/res/layout/activity_note_live_chat.xml
+++ b/app/src/main/res/layout/activity_note_live_chat.xml
@@ -48,24 +48,21 @@
                 android:id="@+id/usernameTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/pretendard_regular"
-                android:textSize="14sp"
+                style="@style/Body2"
+                android:textColor="@color/gray_scale8"
                 android:layout_marginTop="16dp"
                 android:text="이름"
-                android:gravity="top" />
+                />
 
             <TextView
                 android:id="@+id/userIdTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColorHint="@color/gray_scale6"
-                android:fontFamily="@font/pretendard_regular"
-                android:textSize="10sp"
-                android:textColor="@color/gray_scale7"
+                style="@style/Caption1"
+                android:textColor="@color/gray_scale6"
                 android:layout_marginTop="1dp"
                 android:layout_marginBottom="16dp"
-                android:text="아이디"
-                android:gravity="top" />
+                android:text="아이디" />
 
         </LinearLayout>
 
