--- a/app/src/main/res/layout/activity_note_user_profile.xml
+++ b/app/src/main/res/layout/activity_note_user_profile.xml
@@ -32,9 +32,9 @@
         android:id="@+id/rectangle_1"
         android:layout_width="0dp"
         android:layout_height="160dp"
-        android:layout_marginTop="78dp"
+        android:layout_marginTop="17dp"
         android:background="#FFF4EB"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/showMoreButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -42,18 +42,21 @@
         android:id="@+id/rectangle_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"
-        android:src="@drawable/profile_rectangle"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/rectangleimage"
         app:layout_constraintTop_toTopOf="@id/rectangle_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+
+
 
     <ImageView
         android:id="@+id/userprofile"
         android:layout_width="83dp"
         android:layout_height="83dp"
         android:src="@drawable/userimage"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="17dp"
         app:layout_constraintTop_toTopOf="@+id/rectangle_1"
         app:layout_constraintStart_toStartOf="@+id/rectangle_1"
         app:layout_constraintEnd_toEndOf="@+id/rectangle_1" />
@@ -62,24 +65,20 @@
         android:id="@+id/usernameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/pretendard_regular"
-        android:gravity="top"
         android:text="김한주"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/userprofile"
+        style="@style/Head1"
+        app:layout_constraintBottom_toBottomOf="@id/rectangle_1"
         app:layout_constraintEnd_toEndOf="@+id/userprofile"
         app:layout_constraintStart_toStartOf="@+id/userprofile"
-        app:layout_constraintTop_toTopOf="@+id/userprofile" />
+        app:layout_constraintTop_toBottomOf="@+id/userprofile" />
+
 
     <TextView
         android:id="@+id/userIdTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/gray_scale6"
-        android:fontFamily="@font/pretendard_regular"
-        android:textSize="10sp"
-        android:textColor="@color/gray_scale7"
+        style="@style/Body1"
+        android:textColor="@color/gray_scale6"
         android:layout_marginTop="1dp"
         android:layout_marginBottom="16dp"
         android:text="kimhanjooo"
