--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/pretendard_light"
+        style="@style/Caption2"
         android:textColor="@color/gray_scale7"
         android:textSize="10sp"
         android:text="시간"
@@ -46,11 +46,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
-                android:fontFamily="@font/pretendard_regular"
-                android:textSize="16sp"
+                style="@style/Title3"
+                android:textColor="@color/gray_scale8"
                 android:layout_marginTop="16dp"
-                android:text="이름"
-                android:gravity="top"/>
+                android:text="이름" />
 
             <TextView
                 android:id="@+id/userIdTextView"
@@ -58,9 +57,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="16dp"
-                android:fontFamily="@font/pretendard_regular"
-                android:textColor="@color/gray_scale7"
-                android:textSize="10sp"
+                style="@style/Caption1"
+                android:textColor="@color/gray_scale6"
                 android:text="아이디"/>
         </LinearLayout>
 
@@ -69,8 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
-            android:fontFamily="@font/pretendard_regular"
-            android:textSize="12sp"
+            style="@style/Body4"
             android:textColor="@color/gray_scale7"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="16dp"
