--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -34,6 +34,18 @@
             app:layout_constraintStart_toEndOf="@id/comment_user_image"
             app:layout_constraintTop_toTopOf="@id/comment_user_image"
             app:layout_constraintBottom_toBottomOf="@id/comment_user_image"/>
+        <TextView
+            android:id="@+id/deleted_comment_user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="(알 수 없는 사용자)"
+            style="@style/Body1"
+            android:textColor="@color/gray_scale5"
+            android:layout_marginStart="6dp"
+            android:visibility="gone"
+            app:layout_constraintStart_toEndOf="@id/comment_user_image"
+            app:layout_constraintTop_toTopOf="@id/comment_user_image"
+            app:layout_constraintBottom_toBottomOf="@id/comment_user_image"/>
 
         <TextView
             android:id="@+id/comment_writer"
@@ -85,6 +97,18 @@
             android:textColor="@color/gray_scale8"
             android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
+            app:layout_constraintTop_toBottomOf="@id/comment_user_image"
+            app:layout_constraintStart_toStartOf="parent"/>
+        <TextView
+            android:id="@+id/deleted_comment_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="삭제된 댓글입니다"
+            style="@style/Body2"
+            android:textColor="@color/gray_scale5"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="20dp"
+            android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@id/comment_user_image"
             app:layout_constraintStart_toStartOf="parent"/>
 
