--- a/app/src/main/res/layout/activity_note_live_chat.xml
+++ b/app/src/main/res/layout/activity_note_live_chat.xml
@@ -36,7 +36,6 @@
             android:src="@drawable/userimage" />
 
         <LinearLayout
-
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
@@ -51,8 +50,7 @@
                 style="@style/Body2"
                 android:textColor="@color/gray_scale8"
                 android:layout_marginTop="16dp"
-                android:text="이름"
-                />
+                android:text="이름" />
 
             <TextView
                 android:id="@+id/userIdTextView"
@@ -76,5 +74,66 @@
             android:layout_marginEnd="20dp"/>
 
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/community_detail_chatting_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="8dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageButton
+            android:id="@+id/camera_button"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/icon_camera"
+            android:layout_marginStart="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <!-- 채팅 보내기 버튼 -->
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginStart="8dp"
+            app:layout_constraintWidth_percent="0.85"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/camera_button">
+
+            <EditText
+                android:id="@+id/message_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_edittext"
+                android:hint="채팅 보내기"
+                android:padding="14dp"
+                android:textColor="@color/gray_scale5"
+                style="@style/Body2"
+                android:inputType="textMultiLine"
+                android:maxLines="4"
+                android:minLines="1"
+                android:scrollbars="vertical"
+                android:overScrollMode="always" />
+
+            <ImageButton
+                android:id="@+id/send_button"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:src="@drawable/icon_send"
+                android:contentDescription="Send"
+                android:layout_gravity="end|center_vertical"
+                android:layout_marginEnd="4dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:padding="4dp"/>
+        </FrameLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
