--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:text="으아"
+        android:text="삭제하기"
         android:fontFamily="@font/pretendard_semibold"
         android:textSize="16sp"
         android:layout_marginTop="47dp" />
