--- a/app/src/main/res/layout/chat_nochat.xml
+++ b/app/src/main/res/layout/chat_nochat.xml
@@ -1,90 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.view.note.NoteFragment">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/some_id"
-        android:layout_marginRight="132dp"
+        android:layout_marginEnd="152dp"
         android:layout_marginTop="48dp"
-        android:src="@drawable/ic_back" />
+        android:src="@drawable/ic_back"
+        app:layout_constraintEnd_toStartOf="@+id/some_id"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/some_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
-        android:textSize="19sp"
-        android:fontFamily="@font/pretendard_semibold"
-        android:text="쪽지"
-        android:gravity="center" />
+        android:text="채팅"
+        style="@style/Title1"
+        android:textColor="@color/gray_scale8"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/edit_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/some_id"
-        android:layout_marginLeft="118dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="44dp"
-        android:textSize="19sp"
-        android:fontFamily="@font/pretendard_semibold"
+        style="@style/Title2"
+        android:textColor="@color/gray_scale8"
         android:text="편집"
-        android:gravity="center" />
-
+        android:gravity="center"
+        app:layout_constraintStart_toEndOf="@id/some_id"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/rectangle_1"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="88dp"
-        android:background="#E4E4E2" />
-
-
-
+        android:layout_marginTop="15dp"
+        android:background="#E4E4E2"
+        app:layout_constraintTop_toBottomOf="@id/some_id"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
         android:id="@+id/chat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="173dp"
         android:src="@drawable/ic_chat"
-        android:layout_marginTop="252dp"
-        android:layout_centerHorizontal="true" />
-
-
+        app:layout_constraintTop_toBottomOf="@id/rectangle_1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-
+        android:id="@+id/nochattext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:textSize="19sp"
+        android:layout_marginTop="30dp"
         android:text="채팅이 없어요"
-        android:fontFamily="@font/pretendard_semibold"
-        android:layout_marginTop="405dp"
-        android:gravity="center_horizontal|top"
-        />
-
-
+        style="@style/Title1"
+        android:textColor="@color/gray_scale8"
+        app:layout_constraintTop_toBottomOf="@id/chat"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:textSize="17sp"
-        android:fontFamily="@font/pretendard_regular"
+        android:layout_marginTop="6dp"
+        style="@style/Body2"
         android:textColor="@color/gray_scale7"
         android:text="힘전소 사용자들과 대화를 나눠 보세요."
-        android:layout_marginTop="432dp"
-        android:gravity="center_horizontal|top"
-        />
+        app:layout_constraintTop_toBottomOf="@id/nochattext"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
